--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".OnBoardingActivity">
+    tools:context=".activity.OnBoardingActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/slider"
@@ -26,6 +26,10 @@
 
         <Button
             android:visibility="invisible"
+            android:background="@drawable/background_btn"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:textSize="16dp"
             android:id="@+id/get_started_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
