--- a/app/src/main/res/layout/activity_start_app.xml
+++ b/app/src/main/res/layout/activity_start_app.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF8F8"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <ImageView
         android:id="@+id/imageViewStartPageSomethingOne"
