--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#FF7474</color>
+    <color name="brighPink">#FD4343</color>
+    <color name="tiffany">#81D8D0</color>
 </resources>
