--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -51,6 +51,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -157,7 +158,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/pink"
-        android:drawableLeft="@drawable/AddPls"
+        android:drawableLeft="@drawable/cartadd"
         android:text="Add to cart"
         android:textAllCaps="false"
         android:textStyle="bold"
@@ -175,7 +176,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/tiffany"
-        android:drawableLeft="@drawable/buyPls"
+        android:drawableLeft="@drawable/buypls"
         android:text="Buy now"
 
         android:textAllCaps="false"
