--- a/app/src/main/res/layout/new_product.xml
+++ b/app/src/main/res/layout/new_product.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="130dp"
-    android:layout_height="wrap_content"
+    android:layout_height="210dp"
     android:layout_margin="5dp"
     android:padding="5dp"
     app:cardCornerRadius="5dp">
@@ -55,9 +55,9 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/new_product_name"
-            app:layout_constraintStart_toStartOf="@+id/new_product_name"
-            app:layout_constraintTop_toBottomOf="@+id/new_product_name">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <TextView
                 android:id="@+id/dollar"
@@ -69,8 +69,6 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
