--- a/app/src/main/res/layout/activity_show_all.xml
+++ b/app/src/main/res/layout/activity_show_all.xml
@@ -6,12 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".activity.ShowAllActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/show_all_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/pink"
+        android:minHeight="?attr/actionBarSize"
+        app:title="My Cart"
+        android:theme="?attr/actionBarTheme"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/show_all_rec"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/show_all_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
