products are showing at the cart

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="pink">#FF7474</color>
     <color name="brighPink">#FD4343</color>
     <color name="tiffany">#81D8D0</color>
+    <color name="pastelPink">#FFD1DC</color>
 </resources>
