--- a/app/src/main/res/layout/activity_show_all.xml
+++ b/app/src/main/res/layout/activity_show_all.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/pink"
         android:minHeight="?attr/actionBarSize"
-        app:title="My Cart"
+        app:title="All products"
         android:theme="?attr/actionBarTheme"/>
 
     <androidx.recyclerview.widget.RecyclerView
