--- a/app/src/main/res/layout/activity_addres.xml
+++ b/app/src/main/res/layout/activity_addres.xml
@@ -18,15 +18,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="Your Address" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/address_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="409dp"
+        android:layout_height="548dp"
+        app:layout_constraintBottom_toTopOf="@+id/add_address_btn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/address_toolbar"
         tools:listitem="@layout/address_item" />
-
 
     <Button
         android:id="@+id/add_address_btn"
