--- a/app/src/main/res/layout/my_cart_item.xml
+++ b/app/src/main/res/layout/my_cart_item.xml
@@ -175,6 +175,12 @@
                 android:textStyle="bold" />
 
         </LinearLayout>
+        
+        <ImageView
+            android:id="@+id/delete"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_delete"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
